--- a/typescript1-schoolofnet/public/index.html
+++ b/typescript1-schoolofnet/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <script src="main.js"></script>
+    <div id="app"></div>
+    <script src="js/app.js"></script>
     
 </body>
 </html>
